# PubMed_Author_fetch

./: README.md  client.py  output.csv  output2.csv  pyproject.toml
get_papers/: cli.py  fetch.py  filter.py  utils.py
tests/: test_fetch.py  test_filter.py  test_utils.py
