[project]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Soorya Marri"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)",
    "streamlit (>=1.47.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]

[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = ["Soorya Marri"]
readme = "README.md"
packages = [{ include = "get_papers" }]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "get_papers.cli:app"
